# CodingAgent

./: .env.example  .env.local  .gitignore  README.md  package-lock.json  package.json  playwright.config.mjs  tsconfig.base.json
.claude/: launch.json
apps/orchestrator-api/: package.json
apps/orchestrator-api/src/: agent-client.test.ts  agent-client.ts  config.ts  errors.ts  events.ts  index.ts  pg.d.ts  runner.test.ts  runner.ts  store.test.ts  store.ts  versioning.ts  workspace.test.ts  workspace.ts
apps/playground/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: architecture.html
scripts/: dev-all.mjs  smoke-cases.mjs  smoke-common.mjs  smoke-demo 2.mjs  smoke-demo.mjs
services/agent-service/: pyproject.toml
services/agent-service/app/: __init__.py  config.py  main.py  models.py
services/agent-service/app/models/: __init__.py  common.py  execution.py  session.py  spec.py  structured.py
services/agent-service/app/services/: clarifier.py  codegen.py  context_builder.py  critic.py  errors.py  generation_guard.py  invoke_timeout.py  json_parser.py  local_scaffold.py  model_provider.py  provider_router.py  spec_builder.py  structured_output.py  verify_loop.py
services/agent-service/app/strategies/: base.py  plan_solve.py  react_mode.py
services/agent-service/tests/: test_clarifier.py  test_codegen.py  test_critic.py  test_generation_guard.py  test_json_parser.py  test_model_provider.py  test_models.py  test_runtime.py  test_spec_builder.py  test_structured_output.py  test_verify_loop.py
tests/smoke/: ui-smoke.spec.mjs
(+32 files in other folders)
