[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vide-agent-service"
version = "0.1.0"
description = "Python agent service for the vibe coding MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "langchain>=1.2,<1.3",
  "langgraph>=1.0,<1.1",
  "langchain-openai>=0.3,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.28,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
